@@ -111,3 +111,7 @@ Tandem:
 VMS:
 	Pat Rankin
 	rankin@pactechdata.com
+
+z/OS (OS/390):
+	Dave Pitts
+	dpitts@cozx.com
